botoes actives ajustados

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <footer class="footer-todoList style-default lightMode">
         <span class="qtdItems">0 items left </span>
         <div class="div-btns lightMode">
-          <button onclick="allTodos()">All</button>
+          <button class="btn-active" onclick="allTodos()">All</button>
           <button onclick="activeTodos()">Active</button>
           <button onclick="completedTodos()">Completed</button>
         </div>
